deployments/kubernetes/statefulSet.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-stateful
  labels:
    app: demo-go-app
spec:
  ports:
    - port: 8080
      name: http
  clusterIP: None
  selector:
    app: demo-go-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web-stateful
spec:
  serviceName: "web-stateful"
  replicas: 2
  selector:
    matchLabels:
      app: demo-go-app
  template:
    metadata:
      labels:
        app: demo-go-app
    spec:
      containers:
        - name: demo-go-web
          image: demo-go-web:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: demo-go-app
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: www
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: web-stateful-0
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    statefulset.kubernetes.io/pod-name: web-stateful-0
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: web-stateful-1
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  selector:
    statefulset.kubernetes.io/pod-name: web-stateful-1
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
